Tranform email templates

--- a/src/shared/emails/templates/reset-password-template.hbs
+++ b/src/shared/emails/templates/reset-password-template.hbs
@@ -1,39 +1,39 @@
 <table
-  width="100%"
-  border="0"
-  cellspacing="0"
-  cellpadding="0"
-  bgcolor="#f7f7f7"
+  width='100%'
+  border='0'
+  cellspacing='0'
+  cellpadding='0'
+  bgcolor='#f7f7f7'
 >
   <tbody>
     <tr>
-      <td align="center" valign="top">
+      <td align='center' valign='top'>
         <table
-          width="100%"
-          border="0"
-          cellspacing="0"
-          cellpadding="0"
-          bgcolor="#f7f7f7"
+          width='100%'
+          border='0'
+          cellspacing='0'
+          cellpadding='0'
+          bgcolor='#f7f7f7'
         >
           <tbody>
             <tr>
               <td
-                class="m_8415581259083956697header"
-                style="padding: 12px 0 0"
-                align="center"
+                class='m_8415581259083956697header'
+                style='padding: 12px 0 0'
+                align='center'
               >
                 <table
-                  width="620"
-                  border="0"
-                  cellspacing="0"
-                  cellpadding="0"
-                  class="m_8415581259083956697mobile-shell"
+                  width='620'
+                  border='0'
+                  cellspacing='0'
+                  cellpadding='0'
+                  class='m_8415581259083956697mobile-shell'
                 >
                   <tbody>
                     <tr>
                       <td
-                        class="m_8415581259083956697td"
-                        style="
+                        class='m_8415581259083956697td'
+                        style='
                           width: 620px;
                           min-width: 620px;
                           font-size: 0;
@@ -41,42 +41,42 @@
                           font-weight: normal;
                           margin: 0;
                           padding: 0;
-                        "
+                        '
                       >
                         <table
-                          class="m_8415581259083956697header"
-                          width="100%"
-                          border="0"
-                          cellspacing="0"
-                          cellpadding="0"
-                          bgcolor="#f7f7f7"
+                          class='m_8415581259083956697header'
+                          width='100%'
+                          border='0'
+                          cellspacing='0'
+                          cellpadding='0'
+                          bgcolor='#f7f7f7'
                         >
                           <tbody>
                             <tr>
                               <td
-                                class="m_8415581259083956697header-inner"
-                                style="padding: 40px 15px"
+                                class='m_8415581259083956697header-inner'
+                                style='padding: 40px 15px'
                               >
                                 <div
-                                  style="font-size: 0; line-height: 0"
-                                  align="center"
+                                  style='font-size: 0; line-height: 0'
+                                  align='center'
                                 >
                                   <a
-                                    href=""
-                                    style="
+                                    href=''
+                                    style='
                                       text-decoration: none;
                                       color: inherit;
-                                    "
-                                    target="_blank"
-                                    data-saferedirecturl=""
+                                    '
+                                    target='_blank'
+                                    data-saferedirecturl=''
                                   >
                                     <img
-                                      src="<%= image_url %>"
-                                      border="0"
-                                      width="180"
-                                      height="90"
-                                      alt=""
-                                      class="CToWUd"
+                                      src='{{image_url}}'
+                                      border='0'
+                                      width='180'
+                                      height='90'
+                                      alt=''
+                                      class='CToWUd'
                                     />
                                   </a>
                                 </div>
@@ -93,22 +93,22 @@
           </tbody>
         </table>
 
-        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <table width='100%' border='0' cellspacing='0' cellpadding='0'>
           <tbody>
             <tr>
-              <td align="center">
+              <td align='center'>
                 <table
-                  width="620"
-                  border="0"
-                  cellspacing="0"
-                  cellpadding="0"
-                  class="m_8415581259083956697mobile-shell"
+                  width='620'
+                  border='0'
+                  cellspacing='0'
+                  cellpadding='0'
+                  class='m_8415581259083956697mobile-shell'
                 >
                   <tbody>
                     <tr>
                       <td
-                        class="m_8415581259083956697td"
-                        style="
+                        class='m_8415581259083956697td'
+                        style='
                           width: 620px;
                           min-width: 620px;
                           font-size: 0;
@@ -116,40 +116,40 @@
                           font-weight: normal;
                           margin: 0;
                           padding: 0;
-                        "
+                        '
                       >
                         <table
-                          class="m_8415581259083956697main-table"
-                          width="100%"
-                          border="0"
-                          cellspacing="0"
-                          cellpadding="0"
-                          bgcolor="#ffffff"
-                          style="border-radius: 10px"
+                          class='m_8415581259083956697main-table'
+                          width='100%'
+                          border='0'
+                          cellspacing='0'
+                          cellpadding='0'
+                          bgcolor='#ffffff'
+                          style='border-radius: 10px'
                         >
                           <tbody>
                             <tr>
-                              <td style="padding: 0">
+                              <td style='padding: 0'>
                                 <table
-                                  width="100%"
-                                  border="0"
-                                  cellspacing="0"
-                                  cellpadding="0"
+                                  width='100%'
+                                  border='0'
+                                  cellspacing='0'
+                                  cellpadding='0'
                                 >
                                   <tbody>
                                     <tr>
-                                      <td style="padding: 40px 46px">
+                                      <td style='padding: 40px 46px'>
                                         <table
-                                          width="100%"
-                                          border="0"
-                                          cellspacing="0"
-                                          cellpadding="0"
+                                          width='100%'
+                                          border='0'
+                                          cellspacing='0'
+                                          cellpadding='0'
                                         >
                                           <tbody>
                                             <tr>
                                               <td>
                                                 <div
-                                                  class="m_8415581259083956697h1-mobile-medium"
+                                                  class='m_8415581259083956697h1-mobile-medium'
                                                   style="
                                                     color: #50b5ff;
                                                     font-family: 'Open Sans',
@@ -159,7 +159,7 @@
                                                     letter-spacing: 0;
                                                     font-weight: 600;
                                                   "
-                                                  align="left"
+                                                  align='left'
                                                 >
                                                   Password Change Confirmation
                                                 </div>
@@ -167,18 +167,18 @@
                                             </tr>
                                             <tr>
                                               <td
-                                                height="32"
-                                                style="
+                                                height='32'
+                                                style='
                                                   font-size: 0;
                                                   line-height: 0;
                                                   width: 100%;
                                                   min-width: 100%;
-                                                "
-                                                align="center"
+                                                '
+                                                align='center'
                                               ></td>
                                             </tr>
                                             <tr>
-                                              <td style="padding-bottom: 10px">
+                                              <td style='padding-bottom: 10px'>
                                                 <div
                                                   style="
                                                     color: #333333;
@@ -188,17 +188,18 @@
                                                     line-height: 26px;
                                                     font-weight: bold;
                                                   "
-                                                  class="m_8415581259083956697text"
-                                                  align="left"
+                                                  class='m_8415581259083956697text'
+                                                  align='left'
                                                 >
-                                                  Dear <%= username %>,
+                                                  Dear
+                                                  {{username}},
                                                 </div>
                                               </td>
                                             </tr>
                                             <tr>
-                                              <td style="padding-bottom: 36px">
+                                              <td style='padding-bottom: 36px'>
                                                 <div
-                                                  class="m_8415581259083956697text"
+                                                  class='m_8415581259083956697text'
                                                   style="
                                                     color: #333333;
                                                     font-family: 'Open Sans',
@@ -206,7 +207,7 @@
                                                     font-size: 16px;
                                                     line-height: 26px;
                                                   "
-                                                  align="left"
+                                                  align='left'
                                                 >
                                                   You password was successfully
                                                   changed.
@@ -214,42 +215,44 @@
                                               </td>
                                             </tr>
                                             <tr>
-                                              <td align="left">
+                                              <td align='left'>
                                                 <table
-                                                  width="300"
-                                                  border="0"
-                                                  cellspacing="0"
-                                                  cellpadding="0"
-                                                  bgcolor="#50b5ff"
-                                                  style="background: none"
+                                                  width='300'
+                                                  border='0'
+                                                  cellspacing='0'
+                                                  cellpadding='0'
+                                                  bgcolor='#50b5ff'
+                                                  style='background: none'
                                                 >
                                                   <tbody>
                                                     <tr>
                                                       <td
-                                                        width="100%"
-                                                        align="left"
-                                                        style="color: #50b5ff"
+                                                        width='100%'
+                                                        align='left'
+                                                        style='color: #50b5ff'
                                                       >
-                                                        Email: <%= email %>
+                                                        Email:
+                                                        {{email}}
                                                       </td>
                                                     </tr>
                                                     <tr>
                                                       <td
-                                                        width="100%"
-                                                        align="left"
-                                                        style="color: #50b5ff"
+                                                        width='100%'
+                                                        align='left'
+                                                        style='color: #50b5ff'
                                                       >
-                                                        IP Address: <%=
-                                                        ipaddress %>
+                                                        IP Address:
+                                                        {{ipaddress}}
                                                       </td>
                                                     </tr>
                                                     <tr>
                                                       <td
-                                                        width="100%"
-                                                        align="left"
-                                                        style="color: #50b5ff"
+                                                        width='100%'
+                                                        align='left'
+                                                        style='color: #50b5ff'
                                                       >
-                                                        Created: <%= date %>
+                                                        Created:
+                                                        {{date}}
                                                       </td>
                                                     </tr>
                                                   </tbody>
@@ -257,9 +260,9 @@
                                               </td>
                                             </tr>
                                             <tr>
-                                              <td style="padding-top: 22px">
+                                              <td style='padding-top: 22px'>
                                                 <div
-                                                  class="m_8415581259083956697text"
+                                                  class='m_8415581259083956697text'
                                                   style="
                                                     color: #333333;
                                                     font-family: 'Open Sans',
@@ -267,11 +270,9 @@
                                                     font-size: 16px;
                                                     line-height: 33px;
                                                   "
-                                                  align="left"
+                                                  align='left'
                                                 >
-                                                  <span class="il"
-                                                    >Chatty App</span
-                                                  >
+                                                  <span class='il'>Chatty App</span>
                                                   Team
                                                 </div>
                                               </td>
