--- a/src/email/templates/forgot-password-template.hbs
+++ b/src/email/templates/forgot-password-template.hbs
@@ -214,7 +214,7 @@
                                                 >
                                                   You recently requested to
                                                   reset your
-                                                  <span class='il'>Chatty App</span>
+                                                  <span class='il'>Tuiter App</span>
                                                   password. Click the button
                                                   below to reset it.
                                                 </div>
@@ -308,10 +308,10 @@
                                                   align='left'
                                                 >
                                                   Thank you for choosing to use
-                                                  <span class='il'>Chatty App</span>,<br
+                                                  <span class='il'>Tuiter App</span>,<br
                                                   />
                                                   The
-                                                  <span class='il'>Chatty App</span>
+                                                  <span class='il'>Tuiter App</span>
                                                   Team
                                                 </div>
                                               </td>
