--- a/src/email/templates/notification-template.hbs
+++ b/src/email/templates/notification-template.hbs
@@ -226,7 +226,7 @@
                                                   "
                                                   align='left'
                                                 >
-                                                  <span class='il'>Chatty App</span>
+                                                  <span class='il'>Tuiter App</span>
                                                   Team
                                                 </div>
                                               </td>
