--- a/src/email/templates/reset-password-template.hbs
+++ b/src/email/templates/reset-password-template.hbs
@@ -272,7 +272,7 @@
                                                   "
                                                   align='left'
                                                 >
-                                                  <span class='il'>Chatty App</span>
+                                                  <span class='il'>Tuiter App</span>
                                                   Team
                                                 </div>
                                               </td>
